--- a/config/custom.yaml
+++ b/config/custom.yaml
@@ -100,7 +100,7 @@ env_variables:
   SEARX_URL: "localhost:8081"
 command_files:
 - config/commands/defaults.sh
-- config/commands/search_www.sh
+# - config/commands/search_www.sh
 - config/commands/search.sh
 - config/commands/edit_linting.sh
 - config/commands/_split_string.py
