--- a/.gitignore
+++ b/.gitignore
@@ -186,7 +186,7 @@ website/frontend/build
 *.demo.yaml
 
 # trajectory files
-trajectories/**
+#trajectories/**
 !trajectories/demonstrations/**
 
 .vscode/**
