--- a/config/custom.yaml
+++ b/config/custom.yaml
@@ -109,3 +109,12 @@ history_processor: DefaultHistoryProcessor
 # history_processor: Last5Observations
 demonstrations:
 - trajectories/demonstrations/replay__marshmallow-code__marshmallow-1867__default_sys-env_window100__t-0.20__p-0.95__c-2.00__install-1/marshmallow-code__marshmallow-1867.traj
+agent:                                                                              
+  model:                                                                                                                                        
+    host_url: http://47.25.72.214:22002                                                                                    
+    model_name: ollama:llama3:70b                                                                                                               
+    # per_instance_cost_limit: 3.0                                                                                                                
+    # replay_path: null                                                                                                                           
+    # temperature: 0.0                                                                                                                            
+    # top_p: 0.95                
+    num_ctx: 4096
